Fix text area too big with new font.

--- a/src/www/style.css
+++ b/src/www/style.css
@@ -43,7 +43,7 @@ code, #code {
 	caret-color:lime;
 	width:100%;
 	height:500px;
-	height:95vh;
+	height:91vh;
 	font-family:"Share Tech Mono", monospace;
 	border:none;
 	outline:0;
